# wabt-rs

./: Cargo.toml
src/: lib.rs
src/script/: json.rs
wabt-sys/: build.rs  wabt_shim.cc
